tests/e2e/app_hostname_readonly.error
Error: syntax error in story at line 1, column 1

1|    app.hostname = 2
      ^^^^^^^^^^^^^^

E0127: `app[]` is readonly and can not be assigned to.
